...
        self.sortButton = sortButton
        
        let addButton = UIBarButtonItem(
            systemItem: .add,
            primaryAction: addAction
        )
        addButton.accessibilityIdentifier = "memoList.addButton"
        
        navigationItem.rightBarButtonItems = [
            addButton,
            sortButton
        ]
    
...
